--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "nuxt": "^3.11.2",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^5.0.4",
+    "vitest": "^1.6.0"
   }
 }
